--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         <activity
             android:name=".MainActivity3"
             android:label="@string/title_activity_main3"
-            android:theme="@style/Theme.MyFragmentExpl.NoActionBar"></activity>
-        <activity android:name=".MainActivity2">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:theme="@style/Theme.MyFragmentExpl.NoActionBar"> <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
+        <activity android:name=".MainActivity2">
+
         </activity>
         <activity android:name=".MainActivity"></activity>
     </application>
